<resources>
    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="titleClients">CLIENTS</string>
    <string name="textViewName">Name</string>
    <string name="textViewAge">Age</string>
    <string name="textViewAddress">Address</string>
    <string name="textViewPhone">Phone</string>
    <string name="save">Save</string>
    <string name="add">New</string>
    <string name="requiredField">Required Field</string>
    <string name="msgSuccess">Success!</string>
    <string name="menu_label_edit">Edit</string>
    <string name="menu_label_delete">Delete</string>
    <string name="confirm_progress">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cep">PostCode</string>
    <string name="find">Find</string>
    <string name="tipoDeLogradouro">Tipo de Logradouro</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="loading">Carregando...</string>
    <string name="messageAuthenticationError">Authentication Error! Invalid Username and/or Password</string>
</resources>
